--- a/index.css
+++ b/index.css
@@ -1,3 +1,34 @@
 body {
-    margin: 0;
+margin: 0;
+font-family: "Smythe", system-ui;
+  font-weight: 400;
+  font-style: regular;
 } 
+
+.container{
+    width: 600px;
+    height: 1161px;
+    background-color: #FFFFFF;
+    display: block;
+    margin: auto;
+    border: solid 3px black;
+
+   
+
+}
+
+.header{
+  background-image: url('./images/burgers.jpg') ;
+    height: 167px;
+    width: 600px;
+    color: #FFFFFF;
+     font-size: 15px;
+     padding-top: 20px;
+  
+
+}
+
+.headerdiv{
+    margin-left: 40px;
+    margin-top: 0px;
+}
